--- a/app/src/main/res/layout/item_happy_add_detail_card.xml
+++ b/app/src/main/res/layout/item_happy_add_detail_card.xml
@@ -13,9 +13,9 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_happy_routine_add_card"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="398dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="70dp"
+                android:layout_marginHorizontal="20dp"
                 android:gravity="center"
                 android:lineSpacingExtra="4dp"
                 android:text="@string/happy_routine_add_card_detail_title"
@@ -58,42 +59,44 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_happy_routine_add_card_back"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="398dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="invisible"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@id/cl_happy_routine_add_card"
             app:layout_constraintEnd_toEndOf="@id/cl_happy_routine_add_card"
             app:layout_constraintStart_toStartOf="@id/cl_happy_routine_add_card"
             app:layout_constraintTop_toTopOf="@id/cl_happy_routine_add_card">
 
             <TextView
-                android:id="@+id/tv_happy_routine_add_card_back"
+                android:id="@+id/tv_happy_routine_add_card_detail_title_back"
                 style="@style/body2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="49dp"
+                android:layout_marginHorizontal="20dp"
                 android:gravity="center"
+                android:layout_centerInParent="true"
                 android:lineSpacingExtra="4dp"
                 android:text="@string/happy_routine_add_card_detail_title"
                 android:textAppearance="@style/body2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/md_happy_routine_add_card_divider" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/md_happy_routine_add_card_divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginStart="18dp"
-                android:layout_marginTop="39dp"
+                android:layout_marginTop="123dp"
                 android:layout_marginEnd="18dp"
                 app:dividerColor="@color/gray100"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_happy_routine_add_card_back" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_happy_routine_add_card_detail_title_back"
+                android:id="@+id/tv_happy_routine_add_card_detail_content_back"
                 style="@style/body4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -109,20 +112,20 @@
                 app:layout_constraintTop_toBottomOf="@id/md_happy_routine_add_card_divider" />
 
             <ImageView
-                android:id="@+id/iv_happy_routine_add_card_detail_time"
+                android:id="@+id/iv_happy_routine_add_card_detail_time_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="52dp"
                 android:layout_marginBottom="7dp"
                 android:src="@drawable/ic_time"
-                app:layout_constraintBottom_toTopOf="@id/iv_happy_routine_add_card_detail_place"
+                app:layout_constraintBottom_toTopOf="@id/iv_happy_routine_add_card_detail_place_back"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_happy_routine_add_card_detail_title_back"
+                app:layout_constraintTop_toBottomOf="@id/tv_happy_routine_add_card_detail_content_back"
                 app:layout_constraintVertical_bias="1" />
 
             <TextView
-                android:id="@+id/tv_happy_routine_add_card_detail_time"
+                android:id="@+id/tv_happy_routine_add_card_detail_time_back"
                 style="@style/caption1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -130,12 +133,12 @@
                 android:text="@string/happy_routine_add_card_detail_time"
                 android:textAppearance="@style/body2"
                 android:textColor="@color/gray400"
-                app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_time"
-                app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_time"
-                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_time" />
+                app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_time_back"
+                app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_time_back"
+                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_time_back" />
 
             <ImageView
-                android:id="@+id/iv_happy_routine_add_card_detail_place"
+                android:id="@+id/iv_happy_routine_add_card_detail_place_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -145,7 +148,7 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/tv_happy_routine_add_card_detail_place"
+                android:id="@+id/tv_happy_routine_add_card_detail_place_back"
                 style="@style/caption1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -153,9 +156,9 @@
                 android:text="@string/happy_routine_add_card_detail_place"
                 android:textAppearance="@style/body2"
                 android:textColor="@color/gray400"
-                app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_place"
-                app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_place"
-                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_place" />
+                app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_place_back"
+                app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_place_back"
+                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_place_back" />
 
             <ImageView
                 android:id="@+id/iv_happy_routine_add_card_detail_transfer"
