--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -27,21 +28,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
-            android:text="@string/chip_item_happy_relationship"
             android:textColor="@color/happyroutine_red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/chip_item_happy_relationship" />
 
         <ImageView
             android:id="@+id/iv_happy_add_detail_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
-            android:src="@drawable/ic_happy_bling_red"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_happy_add_detail_title" />
+            app:layout_constraintTop_toBottomOf="@id/tv_happy_add_detail_title"
+            tools:src="@drawable/ic_happy_bling_red" />
 
         <TextView
             android:id="@+id/tv_happy_add_detail_subtitle"
@@ -49,10 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/happy_detail_subtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_happy_add_detail_icon" />
+            app:layout_constraintTop_toBottomOf="@id/iv_happy_add_detail_icon"
+            tools:text="@string/happy_detail_subtitle" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_happy_add_detail_card"
