--- a/app/src/main/res/layout/item_happy_add_detail_card.xml
+++ b/app/src/main/res/layout/item_happy_add_detail_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -25,24 +26,24 @@
                 android:id="@+id/iv_happy_routine_add_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_happycard_up_green"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/ic_happycard_up_green" />
 
             <TextView
                 android:id="@+id/tv_happy_routine_add_card_detail_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="70dp"
                 android:gravity="center"
                 android:lineSpacingExtra="4dp"
-                android:text="@string/happy_routine_add_card_detail_title"
                 android:textAppearance="@style/body2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_happy_routine_add_card" />
+                app:layout_constraintTop_toBottomOf="@id/iv_happy_routine_add_card"
+                tools:text="이상형의 특성 10가지 적어보고,\n절대 포기 못할 2가지와\n나와 비슷한 3가지 찾아보기" />
 
             <ImageView
                 android:id="@+id/iv_happy_routine_add_card_detail_magnify"
@@ -72,16 +73,16 @@
                 style="@style/body2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:layout_marginHorizontal="20dp"
                 android:gravity="center"
-                android:layout_centerInParent="true"
                 android:lineSpacingExtra="4dp"
-                android:text="@string/happy_routine_add_card_detail_title"
                 android:textAppearance="@style/body2"
+                app:layout_constraintBottom_toBottomOf="@id/md_happy_routine_add_card_divider"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/md_happy_routine_add_card_divider" />
+                tools:text="이상형의 특성 10가지 적어보고,\n절대 포기 못할 2가지와\n나와 비슷한 3가지 찾아보기" />
 
             <com.google.android.material.divider.MaterialDivider
                 android:id="@+id/md_happy_routine_add_card_divider"
@@ -103,13 +104,13 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="20dp"
-                android:lineSpacingMultiplier="1.3"
                 android:breakStrategy="simple"
-                android:text="@string/happy_routine_add_card_detail_content"
+                android:lineSpacingMultiplier="1.3"
                 android:textColor="@color/gray400"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/md_happy_routine_add_card_divider" />
+                app:layout_constraintTop_toBottomOf="@id/md_happy_routine_add_card_divider"
+                tools:text="평소에 바빠서 연락하지 못한 사람이 있다면 안부인사 개인톡을 보내 봐. 꼭 만나서 밥을 먹거나 하지 않아도 연락 한 통이 나와 그 사람을 연결하는 방법이 될 수 있어" />
 
             <ImageView
                 android:id="@+id/iv_happy_routine_add_card_detail_time_back"
@@ -129,12 +130,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="@string/happy_routine_add_card_detail_time"
                 android:textAppearance="@style/body2"
                 android:textColor="@color/gray400"
                 app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_time_back"
                 app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_time_back"
-                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_time_back" />
+                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_time_back"
+                tools:text="5~10분" />
 
             <ImageView
                 android:id="@+id/iv_happy_routine_add_card_detail_place_back"
@@ -152,12 +153,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="6dp"
-                android:text="@string/happy_routine_add_card_detail_place"
                 android:textAppearance="@style/body2"
                 android:textColor="@color/gray400"
                 app:layout_constraintBottom_toBottomOf="@id/iv_happy_routine_add_card_detail_place_back"
                 app:layout_constraintStart_toEndOf="@id/iv_happy_routine_add_card_detail_place_back"
-                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_place_back" />
+                app:layout_constraintTop_toTopOf="@id/iv_happy_routine_add_card_detail_place_back"
+                tools:text="회사 옥상, 점심식사 후 돌아가는 길" />
 
             <ImageView
                 android:id="@+id/iv_happy_routine_add_card_detail_transfer"
