--- a/app/src/main/res/layout/fragment_happy_progress.xml
+++ b/app/src/main/res/layout/fragment_happy_progress.xml
@@ -13,13 +13,25 @@
         android:background="@color/background">
 
         <TextView
-            android:id="@+id/iv_happy_progress_title"
+            android:id="@+id/tv_happy_progress_title"
             style="@style/body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="40dp"
+            android:visibility="visible"
             android:text="@string/happy_progress_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_happy_progress_back_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:layout_marginTop="40dp"
+            android:visibility="invisible"
+            android:src="@drawable/ic_back_arrow"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,6 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:layout_marginEnd="19dp"
+            android:visibility="visible"
             android:text="@string/happy_progress_edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
