--- a/app/src/main/res/layout/activity_routine_complete.xml
+++ b/app/src/main/res/layout/activity_routine_complete.xml
@@ -44,8 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginHorizontal="36dp"
-            android:layout_marginTop="-310dp"
+            android:layout_marginTop="-230dp"
             android:src="@drawable/ic_bear_handsup_brown"
+            app:layout_constraintDimensionRatio="1:0.94"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent" />
