--- a/app/src/main/res/layout/fragment_happy_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_routine.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/tv_happy_routine_title"
-            style="@style/head3"
+            style="@style/body1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
