--- a/app/src/main/res/layout/activity_daily_routine_add.xml
+++ b/app/src/main/res/layout/activity_daily_routine_add.xml
@@ -14,8 +14,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity"
-        android:fitsSystemWindows="true">
+        android:background="@color/background"
+        android:fitsSystemWindows="true"
+        tools:context=".ui.dailyroutine.dailyroutineadd.DailyRoutineAddActivity">
 
         <ImageView
             android:id="@+id/iv_daily_routine_add_back"
@@ -62,14 +63,14 @@
             android:id="@+id/vp_daily_routine_add_card"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
             android:layout_marginTop="27dp"
             android:layout_marginBottom="91dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/v_daily_routine_add_line"
-            app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/v_daily_routine_add_line" />
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
             android:id="@+id/di_daily_routine_add_indicator"
@@ -80,9 +81,9 @@
             app:dotsSize="6dp"
             app:dotsSpacing="6dp"
             app:dotsWidthFactor="1"
+            app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_add"
             app:selectedDotColor="@color/main1" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -92,7 +93,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
-            android:background="@drawable/shape_black_fill_20_rect"
+            android:background="@drawable/shape_main1_fill_12_rect"
             android:text="@string/daily_routine_add_btn"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
