#49 [chore] 배경색 추가 및 버튼 그림자 삭제

--- a/app/src/main/res/layout/activity_daily_routine_add.xml
+++ b/app/src/main/res/layout/activity_daily_routine_add.xml
@@ -94,6 +94,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="34dp"
             android:background="@drawable/shape_main1_fill_12_rect"
+            style="?android:attr/borderlessButtonStyle"
             android:text="@string/daily_routine_add_btn"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
