--- a/app/src/main/res/layout/activity_routine_complete.xml
+++ b/app/src/main/res/layout/activity_routine_complete.xml
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_routine_complete_title"
