--- a/app/src/main/res/layout/fragment_happy_progress.xml
+++ b/app/src/main/res/layout/fragment_happy_progress.xml
@@ -19,20 +19,22 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="18dp"
             android:layout_marginTop="40dp"
-            android:visibility="visible"
             android:text="@string/happy_progress_title"
+            android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_happy_progress_edit"
+            style="@style/body4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
             android:layout_marginEnd="19dp"
             android:text="@string/happy_progress_edit"
+            android:textColor="@color/gray400"
+            app:layout_constraintBottom_toBottomOf="@id/tv_happy_progress_title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/tv_happy_progress_title" />
 
         <ImageView
             android:id="@+id/iv_happy_progress_mention"
