--- a/app/src/main/res/layout/fragment_happy_routine.xml
+++ b/app/src/main/res/layout/fragment_happy_routine.xml
@@ -28,7 +28,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="22dp"
             android:layout_marginTop="28dp"
-            android:src="@drawable/ic_face_red"
+            android:src="@drawable/ic_bear_face_4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_happy_routine_title" />
 
