--- a/app/src/main/res/layout/fragment_happy_delete.xml
+++ b/app/src/main/res/layout/fragment_happy_delete.xml
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:layout_marginEnd="19dp"
-            android:text="삭제"
+            android:text="취소"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:text="@string/happy_delete_mention"
+            android:text="@string/happy_progress_mention"
             app:layout_constraintBottom_toBottomOf="@id/iv_happy_delete_mention"
             app:layout_constraintEnd_toEndOf="@id/iv_happy_delete_mention"
             app:layout_constraintStart_toStartOf="@id/iv_happy_delete_mention"
@@ -173,11 +173,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="52dp"
                 android:layout_marginBottom="7dp"
                 android:src="@drawable/ic_time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_happy_delete_card_back_content"
+                app:layout_constraintBottom_toTopOf="@id/iv_happy_delete_card_back_place"
                 app:layout_constraintVertical_bias="1" />
 
             <TextView
