--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -36,6 +36,7 @@
             android:layout_marginEnd="6dp"
             android:text="@{viewModel.isDeleteView ? @string/daily_routine_edit_cancel : @string/daily_routine_edit}"
             android:textAppearance="@style/body4"
+            android:clickable="@{viewModel.dailyRoutineListResponse.size() == 0 ? false : true}"
             android:textColor="@color/gray400"
             android:paddingVertical="12dp"
             android:paddingHorizontal="14dp"
@@ -47,7 +48,7 @@
             android:id="@+id/v_daily_routine_blank"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:visibility="@{viewModel.mockDailyRoutineList.size() == 0 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.dailyRoutineListResponse.size() == 0 ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,7 +58,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.mockDailyRoutineList.size() >= 1 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.dailyRoutineListResponse.size() >= 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name">
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="5dp"
-                android:text="@{@string/daily_routine_ing(viewModel.mockDailyRoutineList[0].achieveCount)}"
+                android:text="@{@string/daily_routine_ing(viewModel.dailyRoutineListResponse[0].achieveCount)}"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin_first"
@@ -145,7 +146,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.mockDailyRoutineList.size() >= 2 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.dailyRoutineListResponse.size() >= 2 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_first">
@@ -228,7 +229,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_gray100_stroke_20_rect"
-            android:visibility="@{viewModel.mockDailyRoutineList.size() == 3 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{viewModel.dailyRoutineListResponse.size() == 3 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_second">
@@ -315,7 +316,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_gray200_line_20_rect"
             android:clickable="true"
-            android:visibility="@{viewModel.mockDailyRoutineList.size() == 3 ? View.GONE : View.VISIBLE}"
+            android:visibility="@{viewModel.dailyRoutineListResponse.size() == 3 ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_third">
