#68 [chore] 패키지 이름 수정

--- a/app/src/main/res/layout/activity_happy_add_detail.xml
+++ b/app/src/main/res/layout/activity_happy_add_detail.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.sopetit.softie.ui.happyroutine.adddetail.HappyDetailCardViewModel" />
+            type="com.sopetit.softie.ui.happyroutine.detail.HappyDetailCardViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
