#68 [ui] 바텀시트 연결

--- a/app/src/main/res/layout/fragment_bottomsheet.xml
+++ b/app/src/main/res/layout/fragment_bottomsheet.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/iv_bottom_sheet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="31dp"
             android:src="@drawable/ic_bear_face_crying"
             android:adjustViewBounds="true"
