--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -90,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/daily_routine_user_add"
+                android:lineSpacingMultiplier="1.5"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_first"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_first" />
@@ -178,6 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/daily_routine_user_add"
+                android:lineSpacingMultiplier="1.5"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_second"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_second" />
@@ -261,6 +263,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/daily_routine_user_add"
+                android:lineSpacingMultiplier="1.5"
                 android:textAppearance="@style/body1"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_third"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_third" />
