#73 [mod] bear type companion 변경

--- a/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
+++ b/app/src/main/res/layout/fragment_onboarding_bear_selection.xml
@@ -44,8 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="368dp"
-            android:onClick="@{() -> viewModel.selectBearType(1)}"
-            android:src="@{viewModel.selectedBearType == 1 ? @drawable/ic_bear_brown_up: @drawable/ic_bear_brown_down}"
+            android:onClick="@{() -> viewModel.selectBearType(@string/brown)}"
+            android:src="@{viewModel.selectedBearType == @string/brown ? @drawable/ic_bear_brown_up: @drawable/ic_bear_brown_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_bear_selection_gray_bear"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -57,8 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="368dp"
-            android:onClick="@{() -> viewModel.selectBearType(2)}"
-            android:src="@{viewModel.selectedBearType == 2 ? @drawable/ic_bear_gray_up: @drawable/ic_bear_gray_down}"
+            android:onClick="@{() -> viewModel.selectBearType(@string/gray)}"
+            android:src="@{viewModel.selectedBearType == @string/gray ? @drawable/ic_bear_gray_up: @drawable/ic_bear_gray_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -69,8 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="193dp"
-            android:onClick="@{() -> viewModel.selectBearType(3)}"
-            android:src="@{viewModel.selectedBearType == 3 ? @drawable/ic_bear_panda_up: @drawable/ic_bear_panda_down}"
+            android:onClick="@{() -> viewModel.selectBearType(@string/white)}"
+            android:src="@{viewModel.selectedBearType == @string/white ? @drawable/ic_bear_panda_up: @drawable/ic_bear_panda_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/iv_bear_selection_red_bear"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -82,8 +82,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="193dp"
-            android:onClick="@{() -> viewModel.selectBearType(4)}"
-            android:src="@{viewModel.selectedBearType == 4 ? @drawable/ic_bear_red_up: @drawable/ic_bear_red_down}"
+            android:onClick="@{() -> viewModel.selectBearType(@string/red)}"
+            android:src="@{viewModel.selectedBearType == @string/red ? @drawable/ic_bear_red_up: @drawable/ic_bear_red_down}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -96,9 +96,9 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="34dp"
             style="?android:attr/borderlessButtonStyle"
-            android:background="@{viewModel.selectedBearType != 0 ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
-            android:clickable="@{viewModel.selectedBearType != 0 ? true : false}"
-            android:enabled="@{viewModel.selectedBearType != 0 ? true : false}"
+            android:background="@{viewModel.selectedBearType != @string/none ? @drawable/shape_main1_fill_12_rect : @drawable/shape_gray200_fill_12_rect}"
+            android:clickable="@{viewModel.selectedBearType != @string/none ? true : false}"
+            android:enabled="@{viewModel.selectedBearType != @string/none ? true : false}"
             android:text="@string/bear_selection_button"
             android:textAppearance="@style/body1"
             android:textColor="@color/gray000"
