--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,55 +9,55 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:background="@color/background">
+        android:background="@color/background"
+        android:fitsSystemWindows="true">
 
         <ImageView
             android:id="@+id/iv_login_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo_main1"
             android:layout_marginTop="187dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/ic_logo_main1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원가입하고 봉인해제"
-            android:textAppearance="@style/caption1"
-            android:textColor="@color/gray100"
             android:background="@drawable/ic_speech_dark"
             android:gravity="center"
             android:paddingHorizontal="17dp"
             android:paddingTop="10dp"
             android:paddingBottom="19dp"
-            app:layout_constraintStart_toStartOf="@id/iv_login_bear"
+            android:text="@string/login_content"
+            android:textAppearance="@style/caption1"
+            android:textColor="@color/gray100"
+            app:layout_constraintBottom_toTopOf="@id/iv_login_bear"
             app:layout_constraintEnd_toEndOf="@id/iv_login_bear"
-            app:layout_constraintBottom_toTopOf="@id/iv_login_bear" />
+            app:layout_constraintStart_toStartOf="@id/iv_login_bear" />
 
         <ImageView
             android:id="@+id/iv_login_bear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_bear_brown_down"
             android:layout_marginBottom="44dp"
+            android:src="@drawable/ic_bear_brown_down"
             app:layout_constraintBottom_toTopOf="@id/btn_login_kakao"
-            app:layout_constraintStart_toStartOf="@id/iv_login_logo"
-            app:layout_constraintEnd_toEndOf="@id/iv_login_logo" />
+            app:layout_constraintEnd_toEndOf="@id/iv_login_logo"
+            app:layout_constraintStart_toStartOf="@id/iv_login_logo" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_login_kakao"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_login_kakao"
-            android:background="@android:color/transparent"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="104dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_kakao_login"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
