#79 [ui] 테마 & 루틴 선택 리사이클러뷰 위치 조정

--- a/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_routine.xml
@@ -63,9 +63,9 @@
             android:layout_marginTop="37dp"
             android:layout_marginBottom="90dp"
             android:layout_marginStart="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
             android:scrollbars="vertical"
-            android:scrollbarStyle="outsideInset"
+            android:scrollbarStyle="outsideOverlay"
             android:scrollbarThumbVertical="@drawable/ic_scrollbar"
             app:layout_constraintTop_toBottomOf="@id/iv_onboarding_choice_routine_speech_background"
             app:layout_constraintBottom_toTopOf="@id/btn_onboarding_routine_back_theme"
