--- a/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/fragment_onboarding_choice_theme.xml
@@ -23,11 +23,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_onboarding_choice_theme"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginHorizontal="21dp"
             android:layout_marginTop="34dp"
-            android:layout_marginBottom="21dp"
+            android:layout_marginBottom="34dp"
             android:overScrollMode="never"
             app:layout_constraintBottom_toTopOf="@id/btn_onboarding_choice_theme"
             app:layout_constraintEnd_toEndOf="parent"
