--- a/app/src/main/res/layout/item_onboarding_choice_theme.xml
+++ b/app/src/main/res/layout/item_onboarding_choice_theme.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingHorizontal="10dp">
 
     <ImageView
         android:id="@+id/iv_theme_background"
