--- a/app/src/main/res/layout/fragment_happy_progress.xml
+++ b/app/src/main/res/layout/fragment_happy_progress.xml
@@ -82,12 +82,11 @@
 
             <ImageView
                 android:id="@+id/iv_happy_progress_card_front"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/ic_happycard_up_green" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_happy_progress_card_front_title"
@@ -100,7 +99,8 @@
                 android:textAppearance="@style/body2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_happy_progress_card_front"
+                app:layout_constraintTop_toTopOf="@id/iv_happy_progress_card_front"
+                app:layout_constraintBottom_toBottomOf="@id/iv_happy_progress_card_front"
                 tools:text="10년이 가도" />
 
             <ImageView
@@ -110,8 +110,8 @@
                 android:layout_marginEnd="22dp"
                 android:layout_marginBottom="22dp"
                 android:src="@drawable/ic_magnify"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintBottom_toBottomOf="@id/iv_happy_progress_card_front"
+                app:layout_constraintEnd_toEndOf="@id/iv_happy_progress_card_front" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
