--- a/app/src/main/res/layout/fragment_story_telling_intro.xml
+++ b/app/src/main/res/layout/fragment_story_telling_intro.xml
@@ -13,11 +13,15 @@
 
         <ImageView
             android:id="@+id/iv_story_telling_intro_girl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="218dp"
-            android:src="@drawable/ic_girl1"
+            android:src="@drawable/ic_girl5"
+            android:layout_marginEnd="130dp"
+            android:layout_marginBottom="63dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn_story_telling_intro_next"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
