#99 [chore] 반응형 ui에 따른 간격 수정

--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -76,26 +76,33 @@
 
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_first"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="35dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_daily"
+                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_first"
+                app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_first"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tv_daily_routine_add_name_first"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:lineHeight="20dp"
+                android:lineSpacingExtra="4dp"
                 android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="50dp"
-                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_first"
+                android:layout_marginStart="75dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_first" />
 
             <ImageView
@@ -117,7 +124,6 @@
                 android:text="@{@string/daily_routine_ing(viewModel.dailyRoutineListResponse[0].achieveCount)}"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
-                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_first"
                 app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin_first"
                 app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name_first" />
 
@@ -126,7 +132,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="82dp"
                 android:layout_marginBottom="16dp"
                 android:background="@{viewModel.isRoutineAchieveFirst ? @drawable/shape_gray100_fill_10_rect : @drawable/shape_main1_fill_10_rect}"
                 android:clickable="@{!viewModel.isRoutineAchieveFirst}"
@@ -140,8 +145,7 @@
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -172,26 +176,33 @@
 
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_second"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="35dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_daily"
+                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_second"
+                app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_second"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/tv_daily_routine_add_name_second"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:lineHeight="20dp"
+                android:lineSpacingExtra="4dp"
                 android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="50dp"
-                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_second"
+                android:layout_marginStart="75dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_second" />
 
             <ImageView
@@ -263,11 +274,16 @@
 
             <ImageView
                 android:id="@+id/iv_daily_routine_icon_third"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="35dp"
+                app:layout_constraintBottom_toTopOf="@id/btn_daily_routine_yet_fin_third"
+                app:layout_constraintEnd_toStartOf="@id/tv_daily_routine_add_name_third"
                 android:src="@drawable/ic_daily"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -275,14 +291,14 @@
                 android:id="@+id/tv_daily_routine_add_name_third"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:lineHeight="20dp"
+                android:lineSpacingExtra="4dp"
                 android:text="@string/daily_routine_user_add"
                 android:scrollHorizontally="false"
                 android:textAppearance="@style/body1"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="50dp"
-                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_third"
+                android:layout_marginStart="75dp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_third" />
 
             <ImageView
